fix layout problem

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -2,3 +2,11 @@
     margin-top:30px;
     float:right;
 }
+
+.movies .movie a {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    text-decoration: none;
+    color: inherit;
+  }
